--- a/glowna.html
+++ b/glowna.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
     <div id="header">
-        <div id="title_head">tutaj zdjęcie żaby</div>
+          <center><img src="zaba4.jpg" alt="zaba4" width="500" height="250">
     </div>
     <div id="container">
     <div id="content">
